fixed z-index bug

--- a/css/packages.css
+++ b/css/packages.css
@@ -99,16 +99,15 @@
         flex: 0 0 auto;
         text-align: center;
     }
-
+	
     #packagesContent {
-        width: 90%;
+		width: 90%;
         margin: 20px auto;
-		z-index: 10;
-		position: relative;
     }
-
+	
     .packageCard {
-        padding: 15px;
+		padding: 15px;
+		z-index: 10;
     }
 
     .packageCard img {
@@ -119,4 +118,9 @@
     .packageCard p {
         font-size: 0.9rem;
     }
+
+	.faqSection {
+		z-index: 10;
+		position: relative;
+	}
 }
